# skelegent

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT-LOG.md  MIGRATION.md  NEURON-REDESIGN-PLAN.md  PROMPT.md  PR_BODY_prepare-release.md  README.md  RELEASE_NOTES.md  SECURITY.md  SPECS.md  flake.nix  llms.txt  ralph_queue.md  release-please-config.json
.bak/neuron-op-react/: Cargo.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml  structural-change-detection.yml
.omp/: AGENTS.md
a2a/skg-a2a-core/: Cargo.toml
a2a/skg-a2a-core/src/: card.rs  convert.rs  error.rs  jsonrpc.rs  lib.rs  push.rs  types.rs
auth/neuron-auth/: Cargo.toml  README.md
auth/neuron-auth-file/: Cargo.toml  README.md
auth/neuron-auth-file/src/: lib.rs
auth/neuron-auth-k8s/: Cargo.toml  README.md
auth/neuron-auth-k8s/src/: lib.rs
auth/neuron-auth-oidc/: Cargo.toml  README.md
auth/neuron-auth-oidc/src/: lib.rs
auth/neuron-auth-static/: Cargo.toml  README.md
auth/neuron-auth-static/src/: lib.rs
auth/skg-auth/: CHANGELOG.md  Cargo.toml  README.md
auth/skg-auth-omp/: Cargo.toml
crypto/neuron-crypto/: Cargo.toml  README.md
crypto/neuron-crypto-hardware/: Cargo.toml  README.md
crypto/neuron-crypto-vault/: Cargo.toml  README.md
crypto/skg-crypto/: CHANGELOG.md  Cargo.toml  README.md
docs/: PLAN-next-primitives.md  TODO-aspirational.md  TODO-diy-first.md
docs/architecture/: agentic-decision-map-v3.md  decision-map-gap-analysis-2026.md  decision-map-new-decision-audit.md  gap-analysis-implementation-roadmap.md  orchestrator-composition-guide.md  validation-and-coordination.md
docs/book/: book.toml
docs/design/: 23-decision-surface.md  24-v2-core-philosophy.md  25-v2-cutover-design.md  26-declarative-agent-system.md  state-search-persistence.md
docs/plans/: 2026-02-28-agent-memory-graphrag-design.md  2026-03-02-execution-primitives-rfc.md  2026-03-07-agent-context-primitive.md.superseded  (+8 more)
env/skg-env-docker/: build.rs  (+1 more)
layer0/: CHANGELOG.md  Cargo.toml  README.md
layer0/src/: approval.rs  capability.rs  content.rs  context.rs  dispatch.rs  dispatch_context.rs  effect.rs  effect_log.rs  effect_middleware.rs  environment.rs  error.rs  event.rs  extract.rs  hook.rs  id.rs  intent.rs  lib.rs  lifecycle.rs  middleware.rs  operator.rs  orchestrator.rs  reducer.rs  secret.rs  state.rs  wait.rs
layer0/src/test_utils/: echo_operator.rs  in_memory_store.rs  local_environment.rs  local_orchestrator.rs  logging_hook.rs  mod.rs
layer0/tests/: phase1.rs  phase2.rs  v2_capability_descriptor_wire.rs  v2_dispatcher_discovery_boundary.rs  v2_execution_event_wire.rs  v2_intent_wire.rs  v2_invocation_event_collection.rs  v2_invocation_handle.rs  v2_outcome.rs  v2_protocol_error.rs  v2_terminal_event_semantics.rs
layer0/tests/golden/v2/: capability-descriptor-resource.json  capability-descriptor-tool.json  capability-filter.json  dispatch-event-failed.json  execution-event-completed.json  execution-event-failed.json  execution-event-intent-declared.json  execution-event-suspended-approval.json  intent-request-approval.json  intent-write-memory.json  outcome-approval-suspended.json  outcome-completed.json  outcome-handoff-transferred.json  protocol-error-unavailable.json
local:/: CLEANUP-PLAN.md
neuron/: Cargo.toml  README.md
neuron-auth/: Cargo.toml
neuron-auth-file/: Cargo.toml
neuron-auth-k8s/: Cargo.toml
neuron-auth-oidc/: Cargo.toml
neuron-auth-static/: Cargo.toml
neuron-context/: Cargo.toml
neuron-crypto/: Cargo.toml
neuron-crypto-hardware/: Cargo.toml
neuron-crypto-vault/: Cargo.toml
neuron-effects-core/: Cargo.toml
neuron-effects-local/: Cargo.toml
neuron-env-local/: Cargo.toml
neuron-hook-security/: Cargo.toml
neuron-hooks/: Cargo.toml  README.md
neuron-mcp/: Cargo.toml
neuron-op-react/: Cargo.toml
neuron-op-react/src/: lib.rs
neuron-op-single-shot/: Cargo.toml
neuron-orch-kit/: Cargo.toml
neuron-orch-kit/src/: effects.rs  kit.rs  lib.rs  runner.rs
neuron-orch-kit/tests/: runner.rs
neuron-orch-local/: Cargo.toml
neuron-orch-local/src/: lib.rs
neuron-orch-local/tests/: orch.rs
neuron-provider-anthropic/: Cargo.toml
neuron-provider-ollama/: Cargo.toml
neuron-provider-openai/: Cargo.toml
neuron-secret/: Cargo.toml
neuron-secret-aws/: Cargo.toml
neuron-secret-env/: Cargo.toml
neuron-secret-gcp/: Cargo.toml
neuron-secret-k8s/: Cargo.toml
neuron-secret-keystore/: Cargo.toml
neuron-secret-vault/: Cargo.toml
neuron-state-fs/: Cargo.toml
neuron-state-memory/: Cargo.toml
neuron-tool/: Cargo.toml
neuron-tool/src/: lib.rs
neuron-turn/: Cargo.toml
neuron-turn-kit/: Cargo.toml
neuron/src/: agent.rs  lib.rs
nix/: runner-image.nix
proto/: skg_runner_v1.proto  skg_state_proxy_v1.proto
rules/: 01-context-and-scope.md  02-verification-and-nix.md  04-tdd-and-tests.md  05-docs-and-specs.md  06-worktrees-and-parallelism.md  07-commits-and-backpressure.md  08-review-and-merge.md  09-execution-principles-and-composability.md  11-protocol-philosophy-alignment.md
scripts/: build-runner-image.sh  check-book-drift.sh  new-worktree.sh
skelegent/: CHANGELOG.md  Cargo.toml  README.md
skelegent/src/: agent.rs  lib.rs
skelegent/tests/: v2_fitness.rs
specs/: 00-vision-and-non-goals.md  01-architecture-and-layering.md  02-layer0-protocol-contract.md  03-effects-and-execution-semantics.md  04-operator-turn-runtime.md  05-orchestration-core.md  06-composition-factory-and-glue.md  07-state-core.md  08-environment-and-credentials.md  09-hooks-lifecycle-and-governance.md  10-secrets-auth-crypto.md  11-testing-examples-and-backpressure.md  12-packaging-versioning-and-umbrella-crate.md  13-documentation-and-dx-parity.md  14-durable-orchestration-core.md
tests/: cross_provider.rs  middleware_contract.rs  poc.rs  umbrella_neuron.rs  umbrella_skelegent.rs
(+461 files in other folders)
