[package]
name = "skg-workspace"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
publish = false

# Prevent Cargo from discovering examples/hello-claude as an example of this virtual package
autoexamples = false

[workspace]
resolver = "3"
members = [
  "skelegent",
  "layer0",
  "state/skg-state-memory",
  "state/skg-state-fs",
  "state/skg-state-proxy",
  "env/skg-env-local",
  "orch/skg-run-core",
  "orch/skg-orch-local",
  "orch/skg-orch-kit",
  "orch/skg-orch-env",
  "orch/skg-orch-patterns",
  "turn/skg-tool",
  "turn/skg-tool-macro",
  "turn/skg-turn",
  "op/skg-context-engine",
  "op/skg-op-single-shot",
  "turn/skg-context",
  "provider/skg-provider-anthropic",
  "provider/skg-provider-openai",
  "provider/skg-provider-ollama",
  "provider/skg-provider-codex",
  "provider/skg-provider-router",
  "turn/skg-mcp",
  "secret/skg-secret",
  "crypto/skg-crypto",
  "auth/skg-auth",
  "auth/skg-auth-omp",
  "secret/skg-secret-vault",
  "hooks/skg-hook-security",
  "hooks/skg-hook-retry",
  "hooks/skg-hook-recorder",
  "examples/custom_operator_barrier",
  "examples/middleware_echo",
  "examples/middleware_recorder",
  "examples/middleware_approval",
  "turn/skg-turn-kit",
  "effects/skg-effects-core",
  "effects/skg-effects-local",
  "env/skg-env-docker",
  "runner/skg-runner",
  "examples/hello-claude",
  "a2a/skg-a2a-core",
  "turn/skg-tool-openapi",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secbear/skelegent"
homepage = "https://github.com/secbear/skelegent"

# Dependencies for workspace-level integration tests
[dev-dependencies]
layer0 = { path = "layer0", features = ["test-utils"], version = "0.4.1" }
skelegent = { path = "skelegent", version = "0.4.1" }
skg-turn = { path = "turn/skg-turn", features = [
  "test-utils",
], version = "0.4.1" }
skg-context-engine = { path = "op/skg-context-engine", version = "0.4.1" }
skg-op-single-shot = { path = "op/skg-op-single-shot", version = "0.4.1" }
skg-context = { path = "turn/skg-context", version = "0.4.1" }
skg-tool = { path = "turn/skg-tool", version = "0.4.1" }
skg-state-memory = { path = "state/skg-state-memory", version = "0.4.1" }
skg-state-fs = { path = "state/skg-state-fs", version = "0.4.1" }
skg-provider-anthropic = { path = "provider/skg-provider-anthropic", version = "0.4.1" }
skg-provider-openai = { path = "provider/skg-provider-openai", version = "0.4.1" }
skg-provider-ollama = { path = "provider/skg-provider-ollama", version = "0.4.1" }
skg-provider-codex = { path = "provider/skg-provider-codex", version = "0.4.1" }
skg-secret = { path = "secret/skg-secret", version = "0.4.1" }
skg-orch-local = { path = "orch/skg-orch-local", version = "0.4.1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-str"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
