[workspace]
resolver = "3"
members = [
  "skelegent",
  "layer0",
  "state/skg-state-memory",
  "state/skg-state-fs",
  "state/skg-state-proxy",
  "env/skg-env-local",
  "orch/skg-run-core",
  "orch/skg-orch-local",
  "orch/skg-orch-kit",
  "orch/skg-orch-env",
  "orch/skg-orch-patterns",
  "turn/skg-tool",
  "turn/skg-tool-macro",
  "turn/skg-turn",
  "op/skg-context-engine",
  "op/skg-op-single-shot",
  "turn/skg-context",
  "provider/skg-provider-anthropic",
  "provider/skg-provider-openai",
  "provider/skg-provider-ollama",
  "provider/skg-provider-codex",
  "provider/skg-provider-router",
  "turn/skg-mcp",
  "secret/skg-secret",
  "crypto/skg-crypto",
  "auth/skg-auth",
  "auth/skg-auth-omp",
  "secret/skg-secret-vault",
  "hooks/skg-hook-security",
  "hooks/skg-hook-retry",
  "hooks/skg-hook-recorder",
  "examples/custom_operator_barrier",
  "examples/middleware_echo",
  "examples/middleware_recorder",
  "examples/middleware_approval",
  "turn/skg-turn-kit",
  "effects/skg-effects-core",
  "effects/skg-effects-local",
  "env/skg-env-docker",
  "runner/skg-runner",
  "examples/hello-claude",
  "examples/echo-agent",
  "examples/workflow",
  "a2a/skg-a2a-core",
  "turn/skg-tool-openapi",
  "examples/react-chatbot",
  "examples/multi-agent",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secbear/skelegent"
homepage = "https://github.com/secbear/skelegent"

