[workspace]
resolver = "3"
members = [
   "skelegent",
   "layer0",
   "state/skg-state-memory",
   "state/skg-state-fs",
   "env/skg-env-local",
   "orch/skg-run-core",
   "orch/skg-orch-local",
   "orch/skg-orch-kit",
   "orch/skg-orch-patterns",
   "turn/skg-tool",
   "turn/skg-tool-macro",
   "turn/skg-turn",
   "op/skg-context-engine",
   "op/skg-op-single-shot",
   "provider/skg-provider-anthropic",
   "provider/skg-provider-openai",
   "provider/skg-provider-ollama",
   "turn/skg-mcp",
   "secret/skg-secret",
   "auth/skg-auth",
   "auth/skg-auth-omp",
   "hooks/skg-hook-recorder",
   "effects/skg-effects-core",
   "effects/skg-effects-local",
   "examples/custom_operator_barrier",
   "examples/middleware_echo",
   "examples/middleware_recorder",
   "examples/middleware_approval",
   "examples/echo-agent",
   "examples/workflow",
   "examples/react-chatbot",
   "examples/multi-agent",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secbear/skelegent"
homepage = "https://github.com/secbear/skelegent"
