[package]
name = "neuron-auth-file"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "File-based auth provider that reads a bearer token from disk"
readme = "README.md"
categories = ["asynchronous", "authentication"]
keywords = ["neuron", "ai", "agent", "auth", "bearer-token"]

[dependencies]
neuron-auth = { path = "../neuron-auth" , version = "1.0.0-alpha.1"}
async-trait = "0.1"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tempfile = "3"
