[package]
name = "neuron-context"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Context strategy implementations for neuron-turn"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "context", "llm"]

[dependencies]
neuron-turn = { path = "../neuron-turn" , version = "1.0.0-alpha.1"}
