[package]
name = "neuron-crypto"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cryptographic provider traits for neuron"
readme = "README.md"
categories = ["asynchronous", "cryptography"]
keywords = ["neuron", "ai", "agent", "crypto", "signing"]

[dependencies]
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
