[package]
name = "neuron-effects-core"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core effect execution traits and errors"

[dependencies]
async-trait = "0.1"
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
thiserror = "2"
