[package]
name = "neuron-effects-local"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local effect executor implementation using StateStore and Orchestrator"

[dependencies]
async-trait = "0.1"
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
serde_json = "1"
tracing = "0.1"
thiserror = "2"

neuron-effects-core = { path = "../neuron-effects-core" , version = "1.0.0-alpha.1"}
