[package]
name = "neuron-hooks"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hook registry and composition for neuron"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "hooks", "middleware"]

[dependencies]
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
async-trait = "0.1"

[dev-dependencies]
layer0 = { path = "../layer0", features = ["test-utils"] , version = "1.0.0-alpha.1"}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
