[package]
name = "neuron-mcp"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP client and server bridging MCP tools with neuron ToolRegistry"
readme = "README.md"
categories = ["asynchronous", "network-programming"]
keywords = ["neuron", "ai", "agent", "mcp", "model-context"]

[dependencies]
neuron-tool = { path = "../neuron-tool" , version = "1.0.0-alpha.1"}
rmcp = { version = "0.16", features = [
  "client",
  "server",
  "transport-child-process",
  "transport-io",
  "transport-streamable-http-client-reqwest",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
