[package]
name = "neuron-op-react"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ReAct operator for neuron — model + tools in a reasoning loop"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "react", "operator"]

[dependencies]
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
neuron-turn = { path = "../neuron-turn" , version = "1.0.0-alpha.1"}
neuron-tool = { path = "../neuron-tool" , version = "1.0.0-alpha.1"}
neuron-hooks = { path = "../neuron-hooks" , version = "1.0.0-alpha.1"}
async-trait = "0.1"
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-str"] }

neuron-turn-kit = { path = "../neuron-turn-kit" , version = "1.0.0-alpha.1"}
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
