[package]
name = "neuron-op-single-shot"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Single-shot operator — one model call, no tools, return immediately"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "operator", "llm"]

[dependencies]
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
neuron-turn = { path = "../neuron-turn" , version = "1.0.0-alpha.1"}
async-trait = "0.1"
rust_decimal = { version = "1", features = ["serde-str"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
