[package]
name = "neuron-orch-kit"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unopinionated wiring kit for composing neuron systems"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "orchestration", "composition"]

[dependencies]
async-trait = "0.1"
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
serde_json = "1"
thiserror = "2"
tracing = "0.1"

neuron-effects-core = { path = "../neuron-effects-core" , version = "1.0.0-alpha.1"}
neuron-effects-local = { path = "../neuron-effects-local" , version = "1.0.0-alpha.1"}
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1"

layer0 = { path = "../layer0", features = ["test-utils"] , version = "1.0.0-alpha.1"}
