[package]
name = "neuron-provider-anthropic"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Anthropic API provider for neuron-turn"
readme = "README.md"
categories = ["asynchronous", "web-programming::http-client"]
keywords = ["neuron", "ai", "agent", "anthropic", "claude"]

[dependencies]
neuron-turn = { path = "../neuron-turn" , version = "1.0.0-alpha.1"}
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-str"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
neuron-tool = { path = "../neuron-tool" , version = "1.0.0-alpha.1"}
neuron-hooks = { path = "../neuron-hooks" , version = "1.0.0-alpha.1"}
neuron-context = { path = "../neuron-context" , version = "1.0.0-alpha.1"}
neuron-state-memory = { path = "../neuron-state-memory" , version = "1.0.0-alpha.1"}
neuron-op-react = { path = "../neuron-op-react" , version = "1.0.0-alpha.1"}
