[package]
name = "neuron-secret-aws"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Stub secret resolver for AWS Secrets Manager"
readme = "README.md"
categories = ["asynchronous", "authentication"]
keywords = ["neuron", "ai", "agent", "aws", "secrets"]

[dependencies]
neuron-secret = { path = "../neuron-secret" , version = "1.0.0-alpha.1"}
neuron-auth = { path = "../neuron-auth" , version = "1.0.0-alpha.1"}
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
