[package]
name = "neuron-secret-env"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Secret resolver that reads from process environment variables"
readme = "README.md"
categories = ["asynchronous", "authentication"]
keywords = ["neuron", "ai", "agent", "secrets", "environment"]

[dependencies]
neuron-secret = { path = "../neuron-secret" , version = "1.0.0-alpha.1"}
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
async-trait = "0.1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
