[package]
name = "neuron-secret-gcp"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Stub secret resolver for GCP Secret Manager"
readme = "README.md"
categories = ["asynchronous", "authentication"]
keywords = ["neuron", "ai", "agent", "gcp", "secrets"]

[dependencies]
neuron-secret = { path = "../neuron-secret" , version = "1.0.0-alpha.1"}
neuron-auth = { path = "../neuron-auth" , version = "1.0.0-alpha.1"}
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
