[package]
name = "neuron-secret"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Secret resolution traits and types for neuron"
readme = "README.md"
categories = ["asynchronous", "authentication"]
keywords = ["neuron", "ai", "agent", "secrets", "credentials"]

[dependencies]
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
async-trait = "0.1"
thiserror = "2"
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
