[package]
name = "neuron-state-memory"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-memory StateStore implementation for neuron"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "state", "memory"]

[dependencies]
layer0 = { path = "../layer0" , version = "1.0.0-alpha.1"}
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
