[package]
name = "neuron-tool"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tool interface and registry for neuron"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "tools", "function-calling"]

[dependencies]
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
