[package]
name = "neuron"
version = "1.0.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Composable async agentic AI framework for Rust"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "async", "framework"]

[lib]
path = "src/lib.rs"

[dependencies]
layer0 = { path = "../layer0", optional = true , version = "1.0.0-alpha.1"}
neuron-context = { path = "../neuron-context", optional = true , version = "1.0.0-alpha.1"}
neuron-hooks = { path = "../neuron-hooks", optional = true , version = "1.0.0-alpha.1"}
neuron-mcp = { path = "../neuron-mcp", optional = true , version = "1.0.0-alpha.1"}
neuron-op-react = { path = "../neuron-op-react", optional = true , version = "1.0.0-alpha.1"}
neuron-op-single-shot = { path = "../neuron-op-single-shot", optional = true , version = "1.0.0-alpha.1"}
neuron-orch-kit = { path = "../neuron-orch-kit", optional = true , version = "1.0.0-alpha.1"}
neuron-orch-local = { path = "../neuron-orch-local", optional = true , version = "1.0.0-alpha.1"}
neuron-env-local = { path = "../neuron-env-local", optional = true , version = "1.0.0-alpha.1"}
neuron-provider-anthropic = { path = "../neuron-provider-anthropic", optional = true , version = "1.0.0-alpha.1"}
neuron-provider-ollama = { path = "../neuron-provider-ollama", optional = true , version = "1.0.0-alpha.1"}
neuron-provider-openai = { path = "../neuron-provider-openai", optional = true , version = "1.0.0-alpha.1"}
neuron-state-fs = { path = "../neuron-state-fs", optional = true , version = "1.0.0-alpha.1"}
neuron-state-memory = { path = "../neuron-state-memory", optional = true , version = "1.0.0-alpha.1"}
neuron-tool = { path = "../neuron-tool", optional = true , version = "1.0.0-alpha.1"}
neuron-turn = { path = "../neuron-turn", optional = true , version = "1.0.0-alpha.1"}

[features]
default = ["core", "hooks"]

# Protocol + core wiring
core = [
  "dep:layer0",
  "dep:neuron-context",
  "dep:neuron-tool",
  "dep:neuron-turn",
]
hooks = ["core", "dep:neuron-hooks"]

# Tooling / integration
mcp = ["core", "dep:neuron-mcp"]

# Operators
op-react = ["hooks", "dep:neuron-op-react"]
op-single-shot = ["hooks", "dep:neuron-op-single-shot"]

# Orchestration implementations
orch-kit = ["core", "dep:neuron-orch-kit"]
orch-local = ["orch-kit", "dep:neuron-orch-local"]

# Environment implementations
env-local = ["core", "dep:neuron-env-local"]

# State backends
state-memory = ["core", "dep:neuron-state-memory"]
state-fs = ["core", "dep:neuron-state-fs"]

# Providers
provider-openai = ["core", "dep:neuron-provider-openai"]
provider-anthropic = ["core", "dep:neuron-provider-anthropic"]
provider-ollama = ["core", "dep:neuron-provider-ollama"]
providers-all = ["provider-openai", "provider-anthropic", "provider-ollama"]
