[package]
name = "neuron"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Composable async agentic AI framework for Rust"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "async", "framework"]

[lib]
path = "src/lib.rs"

[dependencies]
layer0 = { path = "../layer0", optional = true, version = "0.4.0" }
neuron-context = { path = "../turn/neuron-context", optional = true, version = "0.4.0" }
neuron-hooks = { path = "../hooks/neuron-hooks", optional = true, version = "0.4.0" }
neuron-mcp = { path = "../turn/neuron-mcp", optional = true, version = "0.4.0" }
neuron-op-react = { path = "../op/neuron-op-react", optional = true, version = "0.4.0" }
neuron-op-single-shot = { path = "../op/neuron-op-single-shot", optional = true, version = "0.4.0" }
neuron-orch-kit = { path = "../orch/neuron-orch-kit", optional = true, version = "0.4.0" }
neuron-orch-local = { path = "../orch/neuron-orch-local", optional = true, version = "0.4.0" }
neuron-env-local = { path = "../env/neuron-env-local", optional = true, version = "0.4.0" }
neuron-provider-anthropic = { path = "../provider/neuron-provider-anthropic", optional = true, version = "0.4.0" }
neuron-provider-ollama = { path = "../provider/neuron-provider-ollama", optional = true, version = "0.4.0" }
neuron-provider-openai = { path = "../provider/neuron-provider-openai", optional = true, version = "0.4.0" }
neuron-state-fs = { path = "../state/neuron-state-fs", optional = true, version = "0.4.0" }
neuron-state-memory = { path = "../state/neuron-state-memory", optional = true, version = "0.4.0" }
neuron-tool = { path = "../turn/neuron-tool", optional = true, version = "0.4.0" }
neuron-turn = { path = "../turn/neuron-turn", optional = true, version = "0.4.0" }

[features]
default = ["core", "hooks"]

# Protocol + core wiring
core = [
  "dep:layer0",
  "dep:neuron-context",
  "dep:neuron-tool",
  "dep:neuron-turn",
]
hooks = ["core", "dep:neuron-hooks"]

# Tooling / integration
mcp = ["core", "dep:neuron-mcp"]

# Operators
op-react = ["hooks", "dep:neuron-op-react"]
op-single-shot = ["hooks", "dep:neuron-op-single-shot"]

# Orchestration implementations
orch-kit = ["core", "dep:neuron-orch-kit"]
orch-local = ["orch-kit", "dep:neuron-orch-local"]

# Environment implementations
env-local = ["core", "dep:neuron-env-local"]

# State backends
state-memory = ["core", "dep:neuron-state-memory"]
state-fs = ["core", "dep:neuron-state-fs"]

# Providers
provider-openai = ["core", "dep:neuron-provider-openai"]
provider-anthropic = ["core", "dep:neuron-provider-anthropic"]
provider-ollama = ["core", "dep:neuron-provider-ollama"]
providers-all = ["provider-openai", "provider-anthropic", "provider-ollama"]
