[package]
name = "neuron-auth-k8s"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Stub Kubernetes ServiceAccount projected token auth provider"
readme = "README.md"
categories = ["asynchronous", "authentication"]
keywords = ["neuron", "ai", "agent", "kubernetes", "auth"]

[dependencies]
neuron-auth = { path = "../neuron-auth", version = "0.4.0" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
