[package]
name = "neuron-auth-static"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Static auth provider that always returns the same token (dev/test)"
readme = "README.md"
categories = ["asynchronous", "authentication"]
keywords = ["neuron", "ai", "agent", "auth", "testing"]

[dependencies]
neuron-auth = { path = "../neuron-auth", version = "0.4.0" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
